<resources>
    <string name="app_name">Monkey think</string>

    <!-- hint-->

    <string name="day_random_number">1</string>

    <string name="month_random_number">11</string>

    <string name="year_random_number">2011</string>

    <string name="lucky">0</string>

    <!-- text view-->
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <!-- check box-->
    <string name="easy">easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>


    <!-- Button-->
    <string name="generate_random_number">Play</string>
    <string name="reset_counter">Reset</string>

    <!-- Radio buttons text -->
    <string name="levelOne">Level 1</string>
    <string name="levelTwo">Level 2</string>
    <string name="levelThree">Level 3</string>
    <string name="resetCounter">Reset</string>

    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="share_app">share</string>

    <string name="share_message"> TRY YOUR LUCK WITH MONKEY THINK APP </string>

</resources>
